# particle-collider

./: .clang-format  CMakeLists.txt  build.sh  imgui.ini  openmpi_to_consider.hpp  run.sh
common/: CMakeLists.txt
common/include/: logger.hpp  logger_selector.hpp  scope_guard.hpp  utils.hpp
common/src/: logger.cpp  logger_selector.cpp  scope_guard.cpp
dependencies/: CMakeLists.txt
graphics/: CMakeLists.txt
graphics/include/: context.hpp  frame_guard.hpp  i_node.hpp  i_pane.hpp  i_window.hpp  pane.hpp  window.hpp
graphics/src/: context.cpp  frame_guard.cpp  pane.cpp  window.cpp
include/: base_compute_block.hpp  base_process.hpp  cuda_compute_block.hpp  engine_factory.hpp  engine_factory_node_impl.hpp  i_particle.hpp  i_process.hpp  mediator_process.hpp  mpi_guard.hpp  opencl_compute_block.hpp  particle.hpp  process.hpp  vec_2d.hpp  worker_process.hpp
include/engine/: backend_selector.hpp  block_num_selector.hpp  engine_factory.hpp  particles_selector.hpp
include/simulation/: backend_selector.hpp  block_num_selector.hpp  particles_selector.hpp  simulation.hpp  simulation_controls.hpp
src/: base_process.cpp  compute_block_factory.cpp  cuda_compute_block.cpp  engine_factory.cpp  main.cpp  mediator_process.cpp  mpi_guard.cpp  opencl_compute_block.cpp  particle.cpp  process.cpp  vec_2d.cpp  worker_process.cpp
src/engine/: backend_selector.cpp  block_num_selector.cpp  engine_factory.cpp  particles_selector.cpp
src/simulation/: backend_selector.cpp  block_num_selector.cpp  particles_selector.cpp  simulation.cpp  simulation_controls.cpp
